Changed the event list to an ArrayList rather than a Linked List.  This greatly increased playspeed of the orignal program, but it may not help as much here or at all Massive optimizations to graphs for increased efficiency and minimization of "ripples" Fixed a possible bug where feedback not being completely removed when rewinding may have adversely affected the reputation algorithm when going back forward